Some change for style

--- a/index.html
+++ b/index.html
@@ -5,47 +5,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shrinath Sharma - Profile</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <header>
-    <h1>Shrinath Sharma</h1>
-    <p>Embedded Software Developer | MERN Stack Developer | STEM Trainer | Full Stack Developer</p>
+    <div class="container">
+      <h1>Shrinath Sharma</h1>
+      <p>Embedded Software Developer | MERN Stack Developer | STEM Trainer | Full Stack Developer</p>
+    </div>
   </header>
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:rohandw0@gmail.com">rohandw0@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/shrinath25" target="_blank">linkedin.com/in/shrinath25</a></p>
-    <p>GitHub: <a href="https://github.com/TNSHR" target="_blank">github.com/TNSHR</a></p>
-  </section>
-  <section id="summary">
-    <h2>Summary</h2>
-    <p>I am a versatile professional with expertise in hardware and software development, specializing in Embedded Systems using C and C++ and modern web applications with the MERN stack. I am passionate about crafting efficient, robust, and user-friendly solutions.</p>
-  </section>
-  <section id="experience">
-    <h2>Experience</h2>
-    <article>
-      <h3>Sr. Robotics Associate</h3>
-      <p><strong>Omotech</strong> | June 2022 – Present</p>
-      <ul>
-        <li>Developed sensor-based systems like obstacle avoidance robots and smart lighting systems.</li>
-        <li>Programmed with Arduino IDE using C and C++ for sensor integration and automation.</li>
-        <li>Taught STEM concepts and conducted live demos for clients.</li>
-      </ul>
-    </article>
-    <article>
-      <h3>Subject Matter Expert</h3>
-      <p><strong>Unacademy</strong> | Jan 2021 – Jan 2022</p>
-      <ul>
-        <li>Specialized in Quantitative Aptitude content creation for CAT aspirants.</li>
-        <li>Delivered high-quality solutions and problem-solving strategies.</li>
-      </ul>
-    </article>
-  </section>
-  <section id="education">
-    <h2>Education</h2>
-    <p><strong>Bachelor of Engineering</strong> in Electrical, Electronics, and Communications Engineering</p>
-    <p>Rajiv Gandhi Technical University | June 2012 – May 2016</p>
-  </section>
+  <nav>
+    <ul>
+      <li><a href="#contact">Contact</a></li>
+      <li><a href="#summary">Summary</a></li>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#education">Education</a></li>
+    </ul>
+  </nav>
+  <main>
+    <section id="contact" class="card">
+      <h2>Contact</h2>
+      <p><i class="fas fa-envelope"></i> <a href="mailto:rohandw0@gmail.com">rohandw0@gmail.com</a></p>
+      <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/shrinath25" target="_blank">LinkedIn</a></p>
+      <p><i class="fab fa-github"></i> <a href="https://github.com/TNSHR" target="_blank">GitHub</a></p>
+    </section>
+    <section id="summary" class="card">
+      <h2>Summary</h2>
+      <p>I am a versatile professional with expertise in hardware and software development, specializing in Embedded Systems using C and C++ and modern web applications with the MERN stack. I am passionate about crafting efficient, robust, and user-friendly solutions.</p>
+    </section>
+    <section id="experience" class="card">
+      <h2>Experience</h2>
+      <article>
+        <h3>Sr. Robotics Associate</h3>
+        <p><strong>Omotech</strong> | June 2022 – Present</p>
+        <ul>
+          <li>Developed sensor-based systems like obstacle avoidance robots and smart lighting systems.</li>
+          <li>Programmed with Arduino IDE using C and C++ for sensor integration and automation.</li>
+          <li>Taught STEM concepts and conducted live demos for clients.</li>
+        </ul>
+      </article>
+      <article>
+        <h3>Subject Matter Expert</h3>
+        <p><strong>Unacademy</strong> | Jan 2021 – Jan 2022</p>
+        <ul>
+          <li>Specialized in Quantitative Aptitude content creation for CAT aspirants.</li>
+          <li>Delivered high-quality solutions and problem-solving strategies.</li>
+        </ul>
+      </article>
+    </section>
+    <section id="education" class="card">
+      <h2>Education</h2>
+      <p><strong>Bachelor of Engineering</strong> in Electrical, Electronics, and Communications Engineering</p>
+      <p>Rajiv Gandhi Technical University | June 2012 – May 2016</p>
+    </section>
+  </main>
   <footer>
     <p>&copy; 2024 Shrinath Sharma</p>
   </footer>
